<resources>
    <string name="app_name">My MPLAD</string>
    <string name="username">Username</string>
    <string name="mp_toolbar">Complaints for MP</string>
    <string name="developer">Developed by Yogeshwar Upendra Shendye</string>
    <string name="logo">Just Logo Image, Captured from internet!!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Not having account? Register here</string>
    <string name="reg_head">Registration Page for MyMPLAD</string>
    <string name="username_prompt">Enter your username(no space)</string>
    <string name="first_name">Enter your first name</string>
    <string name="middle_name">Enter your middle name</string>
    <string name="last_name">Enter your last name</string>
    <string name="phone">Enter your phone number</string>
    <string name="city">Select your District</string>
    <string name="state">Select your State</string>
    <string name="address">Where do you live exactly?</string>
    <string name="repass">Re-Enter your password</string>
    <string name="gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reg">Register</string>
    <string name="adhar">Enter your AADHAR Card Number(if available)</string>
    <string name="reg_username">Enter your username</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="toolbar_head_txt">User Portal(MyMPLAD) Report A Problem</string>
    <string name="problem">Select most suitable option that matches to your complain</string>
    <string name="problem_desc">Describe your problem in detail</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="select_mp">Select MP from the list to whom you want to complain the report to</string>
    <string name="save_changes">Save Changes</string>
    <string name="mp_login">Login As Member of Parliament</string>
    <string name="sample_password">Default MP Login\nusername : manmohan_singh,\nPassword: manmohan_singh123</string>
    <string name="complaint_head">Complaint Title</string>
    <string name="complaint_desc">Complaint Description</string>
    <string name="complain_loc">Complaint Location</string>
    <string name="complaint_res">Complaint Resolved</string>
    <string name="complaint_wait">Put on Waiting</string>
    <string name="cust_name">Name of User</string>
    <string name="cust_con">Contact of User</string>
</resources>