<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPortal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/toolbar_head_txt"/>

    <TextView
        android:id="@+id/txt_st"
        android:layout_marginTop="17pt"
        android:textSize="15dp"
        android:layout_below="@id/toolbar"
        android:text="@string/state"
        android:textColor="@color/col_txt_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/spn_state"
        android:layout_width="match_parent"
        android:layout_below="@+id/txt_st"
        android:layout_height="35dp"
        android:gravity="center"
        android:dropDownWidth="match_parent"
        android:layout_marginTop="7dp"
        android:hint="@string/city" />

    <TextView
        android:id="@+id/txt_dis"
        android:layout_marginTop="7dp"
        android:textSize="15dp"
        android:layout_below="@id/spn_state"
        android:text="@string/city"
        android:textColor="@color/col_txt_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:layout_marginTop="7dp"
        android:layout_below="@+id/txt_dis"
        android:id="@+id/spn_city"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/state"/>

    <TextView
        android:id="@+id/txt_problem"
        android:layout_marginTop="7dp"
        android:textSize="15dp"
        android:layout_below="@id/spn_city"
        android:text="@string/problem"
        android:textColor="@color/col_txt_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:layout_marginTop="7dp"
        android:layout_below="@+id/txt_problem"
        android:id="@+id/spn_problem"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/state"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_desc"
        android:layout_width="match_parent"
        android:layout_below="@id/spn_problem"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edt_problem_desc"
            android:hint="@string/problem_desc"
            android:lines="6"
            android:maxLines="9"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_mp"
        android:layout_marginTop="7dp"
        android:textSize="15dp"
        android:layout_below="@id/til_desc"
        android:text="@string/problem"
        android:textColor="@color/col_txt_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:layout_marginTop="7dp"
        android:layout_below="@+id/txt_mp"
        android:id="@+id/spn_mp"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/select_mp"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_btn_backround"
        android:textSize="18dp"
        android:textColor="@color/col_btn_white"
        android:text="@string/submit_complaint"
        android:textAllCaps="false"
        android:layout_below="@id/spn_mp"/>
</RelativeLayout>