<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:background="@drawable/decent_back"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/sv_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/lv_linear_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="17dp"
                    android:id="@+id/edt_fname"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lname"
                android:layout_width="match_parent"
                android:layout_below="@+id/til_fname"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="7dp"
                android:id="@+id/edt_lname"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/username"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/last_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mname"
                android:layout_below="@id/til_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="7dp"
                    android:id="@+id/edt_mname"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/username"
                    android:layout_height="wrap_content"
                    android:hint="@string/middle_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_below="@id/til_mname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="7dp"
                    android:layout_below="@+id/til_mname"
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/username"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_prompt"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:drawableLeft="@drawable/location"
                android:id="@+id/txt_st"
                android:layout_marginTop="17pt"
                android:textSize="15sp"
                android:layout_below="@id/til_username"
                android:text="@string/state"
                android:textColor="@color/col_txt_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:layout_marginTop="7dp"
                android:layout_below="@+id/txt_st"
                android:id="@+id/spn_state"
                android:dropDownWidth="match_parent"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/state"/>

            <TextView
                android:drawableLeft="@drawable/location"
                android:id="@+id/txt_city"
                android:layout_marginTop="17pt"
                android:textSize="15sp"
                android:layout_below="@id/spn_state"
                android:text="@string/city"
                android:textColor="@color/col_txt_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spn_city"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_below="@+id/txt_city"
                android:dropDownWidth="match_parent"
                android:layout_marginTop="7dp"
                android:hint="@string/city" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spn_city">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="7dp"
                    android:lines="3"
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/location"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="7dp"
                android:layout_below="@id/til_address"
                android:textColor="@color/col_txt_black"
                android:textSize="18sp"
                android:id="@+id/select_gen"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_below="@id/select_gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/male"
                    android:checked="true"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/female"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_below="@id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="7dp"
                    android:id="@+id/edt_phone"
                    android:drawableLeft="@drawable/contact"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_adhar"
                android:layout_below="@id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="7dp"
                    android:id="@+id/adhar"
                    android:inputType="number"
                    android:drawableLeft="@drawable/identity"
                    android:layout_width="match_parent"
                    android:hint="@string/adhar"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pass1"
                android:layout_width="match_parent"
                android:layout_below="@+id/til_adhar"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="7dp"
                    android:inputType="textPassword"
                    android:id="@+id/edt_pass1"
                    android:drawableLeft="@drawable/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/til_pass1"
                android:id="@+id/til_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="7dp"
                    android:layout_below="@+id/til_pass1"
                    android:id="@+id/pass2"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repass"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:background="@drawable/reg_btn_backround"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_pass2"
                android:text="@string/reg"
                android:textColor="@color/col_btn_white"
                android:textSize="18sp"
                android:onClick="register"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>