<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imv_logo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"/>
    <TextView
        android:id="@+id/txt_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imv_logo"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/txt_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_head"
        android:text="@string/developer"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"/>

</RelativeLayout>