<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/decent_back"
    tools:context=".MPLogin">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="30dp"
        android:id="@+id/til_username"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edt_mp_login_username"
            android:layout_height="match_parent"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/til_username"
        android:id="@+id/til_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edt_mp_login_password"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:background="@drawable/btn_login_back"
        android:textColor="@color/col_btn_white"
        android:textSize="18sp"
        android:layout_marginTop="3dp"
        android:layout_below="@id/til_pwd"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:onClick="mp_login"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_below="@id/btn_login"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:text="@string/sample_password"
        android:textColor="@color/col_txt_black"
        android:textSize="20sp" />
</RelativeLayout>