<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rcv_recycler_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <ImageView
        android:id="@+id/imv_complaint_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"/>
    <TextView
        android:id="@+id/complaint_head"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/imv_complaint_logo"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/col_txt_black"
        android:text="@string/complaint_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/complain_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/col_txt_black"
        android:layout_below="@id/complaint_head"
        android:layout_toRightOf="@id/imv_complaint_logo"
        android:text="@string/complaint_desc"/>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/complaint_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/col_txt_black"
        android:layout_below="@id/complain_desc"
        android:layout_toRightOf="@id/imv_complaint_logo"
        android:text="@string/complain_loc"/>
</RelativeLayout>